# exceptions-under-the-hood

./: .gitmodules  CMakeLists.txt  README.md  index.html  notes.md  presentation.md
experiments/: CMakeLists.txt  baz.cc  constint.cc  exception_tests.cc  exception_types.cc  exception_types.hh  foo.cc  foo_ne.cc  fun.cc  fun.hh  int2uint.cc  min.cc  min_ne.cc  noexcept.cc  readall.cc  sjlj_exceptions.cc  sjlj_exceptions.hh  sjlj_exceptions_example.cc  terminate_handler.cc  typeid.cc  widget.cc  widget.hh
expression_parser/: CMakeLists.txt  benchmark.cc  evaluate_exceptions.cc  evaluate_exceptions.hh  evaluate_no_exceptions.cc  evaluate_no_exceptions.hh  expressions.txt  generator.py  test.cc  utils.cc  utils.hh
slides/: index.html  presentation.md
slides/css/: style.css
