set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_library(expression_parser
  utils.cc utils.hh
  evaluate_no_exceptions.cc evaluate_no_exceptions.hh
  evaluate_exceptions.cc evaluate_exceptions.hh)

add_executable(expression_parser_test test.cc)
target_link_libraries(expression_parser_test gtest)
target_link_libraries(expression_parser_test expression_parser)

add_executable(expression_parser_benchmark benchmark.cc)
target_include_directories(expression_parser_benchmark PRIVATE SYSTEM ../external/papipp)
target_link_libraries(expression_parser_benchmark expression_parser)
target_link_libraries(expression_parser_benchmark benchmark)

add_executable(expression_parser_benchmark_papi benchmark.cc)
target_compile_definitions(expression_parser_benchmark_papi PRIVATE EPB_PAPI)
target_include_directories(expression_parser_benchmark_papi PRIVATE SYSTEM ../external/papipp)
target_link_libraries(expression_parser_benchmark_papi expression_parser)
target_link_libraries(expression_parser_benchmark_papi benchmark)
target_link_libraries(expression_parser_benchmark_papi papi)

file(COPY expressions.txt DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
